[gd_scene load_steps=10 format=2]

[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Modules/FreeCamera.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Scripts/Editor.gd" type="Script" id=2]
[ext_resource path="res://Resources/Basic/house4.obj" type="ArrayMesh" id=3]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Modules/SelectCollider.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Misc/FontMedium.tres" type="DynamicFont" id=5]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Docks/RailBuilder/RailBuilder.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Docks/RailAttachments/RailAttachments.tscn" type="PackedScene" id=7]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Docks/Configuration/Configuration.tscn" type="PackedScene" id=8]
[ext_resource path="res://addons/Libre_Train_Sim_Editor/Data/Scripts/EditorHUD.gd" type="Script" id=9]

[node name="Editor" type="Spatial"]
script = ExtResource( 2 )

[node name="FreeCamera" parent="." instance=ExtResource( 1 )]

[node name="house4" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.675243, 5.95786, -16.7071 )
mesh = ExtResource( 3 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null
material/4 = null
material/5 = null
material/6 = null

[node name="SelectCollider" parent="house4" instance=ExtResource( 4 )]

[node name="EditorHUD" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 9 )

[node name="ShowSettingsButton" type="Button" parent="EditorHUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -102.612
margin_top = 6.73477
margin_right = -5.6123
margin_bottom = 34.7348
grow_horizontal = 0
text = "Hide Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Control" parent="EditorHUD"]
anchor_left = 0.624
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.200012
margin_top = 29.0
margin_right = -7.0
margin_bottom = -11.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="EditorHUD/Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RailBuilder" parent="EditorHUD/Settings/TabContainer" instance=ExtResource( 6 )]
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="RailAttachments" parent="EditorHUD/Settings/TabContainer" instance=ExtResource( 7 )]
visible = false
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Configuration" parent="EditorHUD/Settings/TabContainer" instance=ExtResource( 8 )]
visible = false
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="SaveWorldButton" type="Button" parent="EditorHUD"]
margin_left = 7.0
margin_top = 5.0
margin_right = 90.0
margin_bottom = 25.0
text = "Save World"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ObjectName" type="Control" parent="EditorHUD"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -215.5
margin_right = 215.5
margin_bottom = 30.0
grow_horizontal = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="EditorHUD/ObjectName"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="HBoxContainer" parent="EditorHUD/ObjectName"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -6.0
margin_bottom = -1.0
size_flags_horizontal = 3
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="EditorHUD/ObjectName/Name"]
margin_top = 5.0
margin_right = 102.0
margin_bottom = 19.0
grow_horizontal = 2
text = "Current Object: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="EditorHUD/ObjectName/Name"]
margin_left = 106.0
margin_right = 245.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Clear" type="Button" parent="EditorHUD/ObjectName/Name"]
margin_left = 249.0
margin_right = 293.0
margin_bottom = 24.0
text = "Clear"

[node name="Rename" type="Button" parent="EditorHUD/ObjectName/Name"]
margin_left = 297.0
margin_right = 361.0
margin_bottom = 24.0
text = "Rename"

[node name="Delete" type="Button" parent="EditorHUD/ObjectName/Name"]
margin_left = 365.0
margin_right = 420.0
margin_bottom = 24.0
text = "Delete"

[node name="HBoxContainer" type="HBoxContainer" parent="EditorHUD/ObjectName"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ObjectTransform" type="Control" parent="EditorHUD"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -214.0
margin_top = 29.0
margin_right = 216.0
margin_bottom = 63.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="EditorHUD/ObjectTransform"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="EditorHUD/ObjectTransform"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 7.0
margin_right = -5.0
margin_bottom = -3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="EditorHUD/ObjectTransform/HBoxContainer"]
margin_top = 5.0
margin_right = 15.0
margin_bottom = 19.0
text = "x: "

[node name="x" type="SpinBox" parent="EditorHUD/ObjectTransform/HBoxContainer"]
margin_left = 19.0
margin_right = 96.0
margin_bottom = 24.0
size_flags_horizontal = 3
min_value = -1000.0
max_value = 1000.0
step = 0.0
allow_greater = true
allow_lesser = true

[node name="Label2" type="Label" parent="EditorHUD/ObjectTransform/HBoxContainer"]
margin_left = 100.0
margin_top = 5.0
margin_right = 115.0
margin_bottom = 19.0
text = "y: "

[node name="y" type="SpinBox" parent="EditorHUD/ObjectTransform/HBoxContainer"]
margin_left = 119.0
margin_right = 196.0
margin_bottom = 24.0
size_flags_horizontal = 3
min_value = -1000.0
max_value = 1000.0
step = 0.0
allow_greater = true
allow_lesser = true

[node name="Label3" type="Label" parent="EditorHUD/ObjectTransform/HBoxContainer"]
margin_left = 200.0
margin_top = 5.0
margin_right = 215.0
margin_bottom = 19.0
text = "z: "

[node name="z" type="SpinBox" parent="EditorHUD/ObjectTransform/HBoxContainer"]
margin_left = 219.0
margin_right = 296.0
margin_bottom = 24.0
size_flags_horizontal = 3
min_value = -1000.0
max_value = 1000.0
step = 0.0
allow_greater = true
allow_lesser = true

[node name="Label4" type="Label" parent="EditorHUD/ObjectTransform/HBoxContainer"]
margin_left = 300.0
margin_top = 5.0
margin_right = 337.0
margin_bottom = 19.0
text = "x rot: "

[node name="y_rot" type="SpinBox" parent="EditorHUD/ObjectTransform/HBoxContainer"]
margin_left = 341.0
margin_right = 419.0
margin_bottom = 24.0
size_flags_horizontal = 3
min_value = -1000.0
max_value = 1000.0
step = 0.0
allow_greater = true
allow_lesser = true

[node name="Pause" type="Control" parent="EditorHUD"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="EditorHUD/Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="EditorHUD/Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -131.0
margin_top = -80.5
margin_right = 131.0
margin_bottom = 80.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="EditorHUD/Pause/VBoxContainer"]
margin_right = 262.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 5 )
text = "BACK"

[node name="SaveAndExit" type="Button" parent="EditorHUD/Pause/VBoxContainer"]
margin_top = 55.0
margin_right = 262.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 5 )
text = "SAVE_AND_EXIT"

[node name="SaveWithoutExit" type="Button" parent="EditorHUD/Pause/VBoxContainer"]
margin_top = 110.0
margin_right = 262.0
margin_bottom = 161.0
custom_fonts/font = ExtResource( 5 )
text = "EXIT_WITHOUT_SAVING"

[connection signal="pressed" from="EditorHUD/ShowSettingsButton" to="EditorHUD" method="_on_ShowSettings_pressed"]
[connection signal="pressed" from="EditorHUD/SaveWorldButton" to="." method="_on_SaveWorldButton_pressed"]
[connection signal="pressed" from="EditorHUD/ObjectName/Name/Clear" to="EditorHUD" method="_on_ClearCurrentObject_pressed"]
[connection signal="pressed" from="EditorHUD/ObjectName/Name/Rename" to="EditorHUD" method="_on_CurrentObjectRename_pressed"]
[connection signal="pressed" from="EditorHUD/ObjectName/Name/Delete" to="EditorHUD" method="_on_DeleteCurrentObject_pressed"]
[connection signal="value_changed" from="EditorHUD/ObjectTransform/HBoxContainer/x" to="EditorHUD" method="_on_x_value_changed"]
[connection signal="value_changed" from="EditorHUD/ObjectTransform/HBoxContainer/y" to="EditorHUD" method="_on_y_value_changed"]
[connection signal="value_changed" from="EditorHUD/ObjectTransform/HBoxContainer/z" to="EditorHUD" method="_on_z_value_changed"]
[connection signal="value_changed" from="EditorHUD/ObjectTransform/HBoxContainer/y_rot" to="EditorHUD" method="_on_y_rot_value_changed"]
[connection signal="pressed" from="EditorHUD/Pause/VBoxContainer/Back" to="EditorHUD" method="_on_Pause_Back_pressed"]
[connection signal="pressed" from="EditorHUD/Pause/VBoxContainer/SaveAndExit" to="EditorHUD" method="_on_SaveAndExit_pressed"]
[connection signal="pressed" from="EditorHUD/Pause/VBoxContainer/SaveWithoutExit" to="EditorHUD" method="_on_SaveWithoutExit_pressed"]
